# cfr-edge

./: .gitignore  CMakeLists.txt  README.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/public/strategies/: kuhn_cfr_plus.json  kuhn_dcfr.json  leduc_cfr.json  leduc_dcfr.json  meta.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/holdem/: page.tsx
frontend/src/app/solve/: page.tsx
frontend/src/app/strategy/: page.tsx
frontend/src/components/: Nav.tsx  PokerTableScene.tsx
frontend/src/components/charts/: StrategyHeatmap.tsx
frontend/src/lib/: types.ts  utils.ts
include/: abstraction.h  cfr.h  cfr_utils.h  hand_eval.h  holdem.h  infoset.h  json_output.h  kuhn.h  leduc.h  leduc_utils.h  simd_utils.h  soa_store.h
scripts/: make_readme_assets.py  plot_convergence.py
src/: abstraction.cpp  best_response.cpp  cfr.cpp  hand_eval.cpp  holdem.cpp  json_exporter.cpp  kuhn.cpp  leduc.cpp  main.cpp
tests/: abstraction_test.cpp  best_response_test.cpp  hand_eval_test.cpp  holdem_test.cpp  infoset_test.cpp  kuhn_test.cpp  leduc_test.cpp  simd_utils_test.cpp  soa_store_test.cpp
web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
web/public/strategies/: holdem_dcfr.json  kuhn_cfr.json  leduc_cfr_plus.json  meta.json
web/src/: three.d.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/algorithm/: page.tsx
web/src/app/cpp/: page.tsx
web/src/app/holdem/: page.tsx
web/src/app/play/: page.tsx
web/src/app/solve/: page.tsx
web/src/app/strategy/: page.tsx
web/src/components/: Nav.tsx  PokerTableScene.tsx
web/src/components/charts/: ConvergenceChart.tsx  StrategyHeatmap.tsx
web/src/lib/: data.ts
web/src/store/: solver.ts
